# git-repo-manager

./: .flake8  .gitignore  BUILD.md  Makefile  README.md  cli.py  config.example.yml  generate_docs.py  mypy.ini  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_all_python_versions.py  test_current_python.py  test_python_versions.py
.github/workflows/: build.yml  docs.yml  gh-pages.yml  release.yml  security.yml  test.yml
build_scripts/: __init__.py  build_all.py  build_deb.py  build_exe.py  build_rpm.py
docs/: README.md  api.md  api_auto.md  cli.md  cli_auto.md  configuration.md  development.md  examples.md  index.md  installation.md  troubleshooting.md  usage.md
src/: __init__.py  composer_manager.py  config.py  config_generator.py  github_client.py  gitlab_client.py  repository_manager.py  services.py
tests/: test_cli.py  test_config.py  test_github.py  test_github_client.py  test_gitlab_client.py  test_integration.py  test_output_dir.py  test_services.py
